try the prepare